# marcli

./: .gitignore  CMakeLists.txt  README.md  marcli  marcli.c
cmake-build/: CMakeCache.txt  Makefile
include/: marcli.h  marcli_util.h
src/: marcli_util.c
